--- a/style.css
+++ b/style.css
@@ -97,12 +97,13 @@ a {
 .streetimg {
     display: flex;
     justify-content: center;
-   
+    overflow:hidden;
 }
 
 .streetimg img {
  width: 100%;
  margin-bottom: 30px;
+ border-radius:10%;
 }
 
 .museum > div:not(.cardfooter) {
@@ -184,6 +185,8 @@ div.paratext {
 .brimg {
     margin-top: 30px;
     width: 100%;
+    overflow:hidden;
+    border-radius:6%;
 }
 
 .brimg img {
@@ -195,7 +198,8 @@ div.paratext {
 
 .rightrow2 {
   display: flex;
-  column-gap: 25px;
+  column-gap:2%;
+  flex-wrap: nowrap;
 }
 
 /* Portrait Card */
@@ -208,6 +212,10 @@ div.paratext {
    justify-content: space-around;
    flex-shrink: 2;
    color: #333333;
+   flex-shrink: 1.5;
+   transition: text-decoration 0.3s ease-out 3s;
+   margin-top: 0;
+   margin-bottom: 0;
 }
 
 .dots {
@@ -239,9 +247,22 @@ div.paratext {
     line-height: 44px;
 }
 
+.prtdiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 .prtimg {
-    width: 100%;
     margin-top: 0;
+    display: flex;
+    justify-content: center;
+    border-radius:15%;
+}
+
+.prtimg3 {
+    max-width: 90%;
+    overflow:hidden;
 }
 
 .prtpara {
@@ -260,8 +281,9 @@ div.paratext {
     display: flex;
     flex-direction: column;
    justify-content: space-around;
-   flex-grow: 2;
+   /* flex-grow: 2; */
    color: #333333;
+   flex-shrink: 1.5;
 }
 
 .vpdiv1 {
@@ -285,6 +307,8 @@ div.paratext {
 
 .vpimg {
     margin-top: 30px;
+    overflow:hidden;
+    border-radius:15%;
 }
 
 .vpdomain {
@@ -296,5 +320,99 @@ div.paratext {
     margin-bottom: 5px;
     padding: 6px;
 }
+
+/* Animations */
+ /* .streetimg img:hover ,.brimg:hover ,.prtimg:hover ,.vpimg :hover{
+   transform: scale(1.2);
+   width:100%;
+ } */
+
+
+ .portrait:hover .prtname h2{
+    text-decoration: underline;
+    transition: text-decoration 0.5s ease-out;
+ }
+
+
+ /* img.strimg1 ,img.brdimg2 ,img.prtimg3 ,img.vpimg4 {
+    width: 100%;
+    transition: transform 1s ease,border-radius 1s ease;
+    transform-origin: 50% 50%;
+} */
+
+/* img.brdimg2:hover,img.prtimg3:hover ,img.vpimg4:hover
+ {
+   
+    transform: scale(1.1);
+    width: 100%;
+    border-radius:10%;
+} */
+
+/* Museum  */
+
+.museum .streetimg img {
+    width: 100%;
+    transition: transform 1s ease, border-radius 1s ease;
+    transform-origin: 50% 50%;
+  }
+
+  .museum:hover .streetimg img {
+    transform: scale(1.1);
+    border-top-left-radius: 20%;
+    border-top-right-radius: 20%;
+  }
+
+/* Bread  */
+
+.bread .brimg img {
+    width: 100%;
+    transition: transform 1s ease, border-radius 1s ease;
+    transform-origin: 50% 50%;
+  }
+
+  .bread:hover .brimg img {
+    transform: scale(1.1);
+    border-top-left-radius: 8%;
+    border-top-right-radius: 8%;
+  }
+
+  /* Portrait */
+
+.portrait .prtimg img {
+    width: 100%;
+    transition: transform 1s ease, border-radius 1s ease;
+    transform-origin: 50% 50%;
+  }
+
+  .portrait:hover .prtimg img {
+    transform: scale(1.1);
+    border-top-left-radius: 8%;
+    border-top-right-radius: 8%;
+  }
+
+  /* Vintage Painting  */
+
+  .vintagepaint .vpimg img {
+    width: 100%;
+    transition: transform 1s ease, border-radius 1s ease;
+    transform-origin: 50% 50%;
+  }
+
+  .vintagepaint:hover .vpimg img {
+    transform: scale(1.1);
+    border-top-left-radius: 8%;
+    border-top-right-radius: 8%;
+  }
+
+/* img.strimg1:hover {
+    transform: scale(1.1);
+    width: 100%;
+    border-top-left-radius: 20%;
+    border-top-right-radius: 20%;
+} */
+
+
+
+ 
 
 
